plugins {
	id 'idea'
	id 'java-library'
	id 'maven-publish'
	id 'application'

	alias(libs.plugins.lombok)
	alias(libs.plugins.errorprone)
}

repositories {
	mavenLocal()
	mavenCentral {
		mavenContent { releasesOnly() }
	}
	maven { url = 'https://jitpack.io' }
	maven {
		url = "https://repo1.maven.org/maven2/" // https://github.com/nats-io/nats.java#using-gradle
	}
}

application {
	mainClass = 'examples.rocksdb.RocksDBConfig'
}


idea { module { downloadJavadoc = true; downloadSources = true } }

java {
	withSourcesJar()
}

lombok { version = 'latest.release' }

tasks.withType(JavaCompile).configureEach {
	options.encoding = 'UTF-8' // = compileJava.options.encoding = "UTF-8"
	options.compilerArgs.addAll(['-Xlint:all,-serial', '-parameters'])
	options.release.set(21)// javac --release 7→8..25+
	options.deprecation = true
	options.debug = true

	options.errorprone {
		enabled = true
		disableWarningsInGeneratedCode = true
		excludedPaths = ".*/(generated|test).*/.*"
		disable("UnusedVariable")
		disable("MissingSummary")
		disable("StringConcatToTextBlock")
		errorproneArgs = ["-XepExcludedPaths:.*/test/.*"]
	}
}

tasks.withType(AbstractArchiveTask).configureEach {
	preserveFileTimestamps = false
	reproducibleFileOrder = true
}

publishing {
	publications {
		maven(MavenPublication) {
			from components.java
			// не ругаться на версии с +
			suppressPomMetadataWarningsFor('runtimeElements')
		}
	}
}
tasks.withType(GenerateModuleMetadata).configureEach {
	enabled = false // no Gradle-JSON-vs-POM
}

test { //or: tasks.named('test'){ or: tasks.withType(Test).configureEach // https://docs.gradle.org/current/dsl/org.gradle.api.tasks.testing.Test.html
	useJUnitPlatform()
	enableAssertions = true
	maxHeapSize = "5G"
	jvmArgs += [
		'-XX:+EnableDynamicAgentLoading',
		'-showversion',
		'--enable-native-access=ALL-UNNAMED'
	]

	// gradle -Dmy.sys.prop=value НЕ передаёт в my.sys.prop=value в forked test. Хитрый хак: -D&my.sys.prop=5
	for (entry in System.getProperties()){
		if (entry.key.toString().startsWith("&"))
			options { systemProperty(entry.key.toString().substring(1), entry.value) }
	}
	workingDir project.projectDir // Set the working directory to the subproject directory e.g. fink-lab/common-utils
	systemProperty("user.dir", project.projectDir) // контрольная перестраховка ^
	println "[INFO] Test JVM: ${getJavaVersion()} = ${getExecutable()==null ? org.gradle.internal.jvm.Jvm.current().getJavaExecutable().getAbsolutePath() : getExecutable()}"
	try { println "[INFO] Test JVM: ${javaLauncher.get().executablePath} = ${javaLauncher.get().metadata.getJvmVersion()}" } catch (Throwable ignore){}
	println "[INFO] ${project.name}.workingDir = $workingDir\n${"*".repeat(120)}"
}

dependencies {
	errorprone("com.google.errorprone:error_prone_core:latest.release")

	compileOnly libs.bundles.coreAnnotation
	implementation libs.guava, libs.commonsLang3, libs.slf4jApi

	implementation libs.rocksdb
}